# iss-escape

./: READ.md  README.md  bullet.py  button.py  continue_button.py  database.txt  dokoncz2.xcf  enemies.py  enemy.py  explosion.py  level_1.py  levels_button.py  levels_light.py  main.py  main2.py  master.py  menu_button.py  pause_button.py  pseudocode.txt  pyproject.toml  quit_button.py  restart_button.py  retry_button.py  start_light.py  station.py  stone_2.xcf
assets/textures/: dark.sb3  levels_button.sb3  light_sb3.sb3  quit.sb3  start_button.sb3  start_button_2.sb3
saving/: scores.txt
